# cinnog_example

./: .gitignore  Cargo.toml  Makefile.toml  README.md  netlify.toml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: counter.rs  mod.rs  navigation.rs
app/src/pages/: blog.rs  blog_post.rs  home_page.rs  mod.rs  not_found.rs
blog/: a_draft.md  test.md
blog/2023/: this_year.md
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
frontend/src/: lib.rs
generator/: Cargo.toml
generator/src/: main.rs
posts/: test.md
style/: main.scss
