[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
cinnog.workspace = true

leptos.workspace = true
leptos_meta.workspace = true
tracing.workspace = true
bevy_ecs.workspace = true

leptos_router = { workspace = true, features = ["nightly"] }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
