[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
cinnog = { workspace = true, features = ["generator"] }
bevy_ecs.workspace = true

serde.workspace = true

tokio = { version = "1.43.0", features = ["full"] }
regex = { version = "1.10.2", features = [] }

[features]
development = ["cinnog/development"]
